2014-06-20  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/wxterminal/wxt_gui.h:  The configuration test for
	wxWidgets >= 2.8 had no effect on code generation. Remove this test.

2014-06-16  Karl Ratzsch  <ratzsch@uni-freiburg.de>

	* fit.c:  FIT_NITER holds number of iterations used by previous fit.

2014-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/wxterminal/wxt_gui.h:  wxWidgets versions > 2.8 want
	the main program to call XInitThreads(), but fail to specify -lX11 in 
	wxt-config.   So we force this ourselves.
	Bug #1401

	* src/graphics.c (xtick2d_callback): Clip r axis tics and tic labels to
	the bounding box of the plot.
	Bug #1290

2014-06-15  Dmitri A. Sergatskov  <dasergatskov@gmail.com>

	* configure.in: Add LRELEASE for Qt5 autoconfiguration

2014-06-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c (main):  Fix persist mode on Windows when reading
	from a pipe.
	See Bug #1322

2014-06-15  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* src/binary.c src/datafile.h src/syscfg.h:  LFS support on Windows
	for MSVC and MinGW.
	See also Patch #675

2014-06-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c src/boundary.c src/plot2d.c (eval_plots):
	Unlike all other axes, log scaling was being applied to the color axis
	(cb) in do_plot() rather than in the caller eval_plots().
	This caused "refresh" (as opposed to "replot") to fail.  Move the
	log-scale correction up to eval_plots() like the other axes.
	Bug #1425

	* src/misc.c (prepare_call):  Allow parenthesized expressions as
	call parameters.  The value is passed as a string.

	* src/command.c (exit_command):  New option "exit error 'message'"
	prints the message and return to the top command line, breaking out
	of any loops or calls cleanly.  In non-interactive mode the program
	then exits.

2014-06-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/qtterminal/qt_term.cpp (qt_waitforinput):  Fix index error