@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.368 2014/06/16 19:33:54 sfeam Exp $
+dnl $Id: configure.in,v 1.369 2014/06/20 17:41:47 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to disable DEVELOPMENT_RELEASE
@@ -1035,8 +1035,7 @@ if test "${enable_wxwidgets}" = yes ; then
       enable_wxwidgets_ok=no
     fi
     if expr ${WXWIDGETS_VERSION} \> 2.8 >/dev/null; then
-      TERMLIBS="$TERMLIBS -lX11"
-      AC_DEFINE(WX_NEEDS_XINITTHREADS, 1, [wxWidgets > 2.9 wants calling program to invoke XInit()])
+      AC_DEFINE(WX_NEEDS_XINITTHREADS, 1, [wxWidgets >= 2.9 wants calling program to invoke XInit()])
     fi
 
     dnl Make sure we're using more than the 'base' wxWidgets. Those 
