@@ -1,5 +1,5 @@
 /*
- * $Id: wxt_gui.h,v 1.46 2014/06/16 19:33:55 sfeam Exp $
+ * $Id: wxt_gui.h,v 1.47 2014/06/20 17:41:48 sfeam Exp $
  */
 
 /* GNUPLOT - wxt_gui.h */
@@ -206,7 +206,7 @@ extern "C" {
 
 #ifdef WXT_MULTITHREADED
 
-#if defined(WX_NEEDS_XINITTHREADS)
+#if defined(WX_NEEDS_XINITTHREADS) && defined(X11)
 #include <X11/Xlib.h>	/* Magic fix for linking against wxgtk3.0 */
 #endif
 
@@ -241,7 +241,7 @@ DEFINE_EVENT_TYPE(wxStatusTextEvent)
 class wxtApp : public wxApp
 {
 public:
-#if defined(WXT_MULTITHREADED) && defined(WX_NEEDS_XINITTHREADS)
+#if defined(WXT_MULTITHREADED) && defined(WX_NEEDS_XINITTHREADS) && defined(X11)
 	/* Magic fix needed by wxgtk3.0 */
         wxtApp() : wxApp() { XInitThreads(); } 
 #endif 
